fix: improve spacing of list items

--- a/.app/css/4-components/article.scss
+++ b/.app/css/4-components/article.scss
@@ -48,6 +48,10 @@
     padding-inline-start: var(--space-4);
   }
 
+  li + li {
+    margin-block-start: 0.2em;
+  }
+
   h1 {
     font-size: var(--font-size-2xl);
   }
